# build-a-website

./: .ignore  Cargo.toml  Config.toml  Shuttle.toml
_site/posts/: 2024-05-19-my_first_post.html  my_first_post.html
posts/: 2024-05-14-Day-1.md  2024-05-15-Day-2.md  2024-05-16-Day-3.md  2024-05-19-Day-6.md  2024-05-19-my_first_post.mk  2024-05-22-Day-9.md  2024-05-28-A-random-post.md  my_first_post.mk
posts/Building-a-website/: 2024-05-15-Day-2.md  2024-05-16-Day-3.md  2024-05-17-Day-4.md  2024-05-18-Day-5.md  2024-05-20-Day-7.md  2024-05-21-Day-8.md
posts/Building-a-website/part 2/: 2024-05-14-Day-1.md
src/: build.rs  handlers.rs  main.rs  post.rs
static/css/: styles.css
static/html/: test.html
templates/: base.html  blog.html  index.html  navbar.html  post.html
