[package]
name = "build-a-website"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
tera = "1"
lazy_static = "1.4"
comrak = "0.23"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }